--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,6 @@ html(lang="en")
   head
     title= title
     link(rel="stylesheet", href="stylesheets/style.css")
-    script(type="text/javascript", src="js/javascript.js")
+    script(type="text/javascript", src="javascripts/javascript.js")
     script(type="text/javascript", src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"")
   body!= body
