--- a/views/index.jade
+++ b/views/index.jade
@@ -1,1 +1,25 @@
-a.switchy(href="#") switch
+//a.switchy(href="#") switch
+
+div.srvr server
+
+table
+	each device in devices
+		tr
+			td.devicon(devicestatus=device.devicestatus, devicename=device.devicename)= device.devicename
+			td
+				a.togbutton(devicename=device.devicename,
+				href="#") Toggle
+			td
+				if device.flashstatus == "Flashing"
+					a.fbutton.stopflashbutton(devicename=device.devicename,
+					href="#") Stop Flash
+				else
+					a.fbutton.flashbutton(devicename=device.devicename,
+					href="#") Flash
+	tr
+		td.devicon
+		td
+			a.togbutton(href="#") Toggle
+		td
+			a.fbutton(href="#") Flash
+
