--- a/views/index.jade
+++ b/views/index.jade
@@ -5,21 +5,29 @@ div.srvr server
 table
 	each device in devices
 		tr
-			td.devicon(devicestatus=device.devicestatus, devicename=device.devicename)= device.devicename
+			td.devicon(devicestatus=device.devicestatus, deviceid=device.deviceid)= device.deviceid
 			td
-				a.togbutton(devicename=device.devicename,
+				a.togbutton(deviceid=device.deviceid,
 				href="#") Toggle
 			td
 				if device.flashstatus == "Flashing"
-					a.fbutton.stopflashbutton(devicename=device.devicename,
+					a.fbutton.stopflashbutton(deviceid=device.deviceid,
 					href="#") Stop Flash
 				else
-					a.fbutton.flashbutton(devicename=device.devicename,
+					a.fbutton.flashbutton(deviceid=device.deviceid,
 					href="#") Flash
+			td.sliderouter
+				div.dimslider(deviceid=device.deviceid, initval=device.dimval)
+			td.dimvalbox
+				p.dimvalp(deviceid=device.deviceid)= device.dimval
 	tr
 		td.devicon
 		td
 			a.togbutton(href="#") Toggle
 		td
 			a.fbutton(href="#") Flash
+		td.sliderouter
+			div.dimslider
+		td.dimvalbox
+			p.dimvalp 255
 
