--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,11 @@ html(lang="en")
   head
     title= title
     link(rel="stylesheet", href="/stylesheets/style.css")
-    script(type="text/javascript", src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js")
+    link(rel="stylesheet", href="/stylesheets/jquery-ui.css", type="text/css", media="all")
+    link(rel="stylesheet", href="/stylesheets/ui.theme.css", type="text/css", media="all")
+    //script(type="text/javascript", src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js")
+    script(type="text/javascript", src="/javascripts/jquery.min.js")
+    script(type="text/javascript", src="/javascripts/jquery-ui.min.js")
     script(type="text/javascript", src="/socket.io/socket.io.js")
     script(type="text/javascript", src="/javascripts/javascript.js")
   body!= body
