--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype 5
 html(lang="en")
   head
     title= title
+    link(rel="shortcut icon", href="/images/favicon.ico", type="image/png")
     link(rel="stylesheet", href="/stylesheets/style.css")
     link(rel="stylesheet", href="/stylesheets/jquery-ui.css", type="text/css", media="all")
     link(rel="stylesheet", href="/stylesheets/ui.theme.css", type="text/css", media="all")
