--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,6 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  /*background-image: url('/images/dark_mosaic.png');*/
+  background-image: url('/images/dvsup.png');
   background-color: #999;
 }
 
@@ -66,4 +65,17 @@ tr:last-child {
 	width: 300px;
 }
 
-
+.navbar .brand {
+  float: left;
+  display: block;
+  padding: 8px 20px 12px;
+  margin-left: -20px;
+  font-size: 20px;
+ /* font-weight: 200;*/
+  line-height: 1;
+  color: #ffffff;
+  font-family:"Futura", "Helvetica", "Arial";
+  text-transform: uppercase;
+  letter-spacing:2px;
+  text-shadow: 0 0 20px white;
+}
