--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,12 +3,15 @@ html(lang="en")
   head
     title= title
     link(rel="shortcut icon", href="/images/favicon.ico", type="image/png")
-    link(rel="stylesheet", href="/stylesheets/style.css")
     link(rel="stylesheet", href="/stylesheets/jquery-ui.css", type="text/css", media="all")
-    link(rel="stylesheet", href="/stylesheets/ui.theme.css", type="text/css", media="all")
+    link(rel="stylesheet", href="/stylesheets/bootstrap.min.css", type="text/css", media="all")
+    link(rel="stylesheet", href="/stylesheets/responsive-fix.css", type="text/css", media="all")
+    link(rel="stylesheet", href="/stylesheets/bootstrap-responsive.css", type="text/css", media="all")
+    link(rel="stylesheet", href="/stylesheets/style.css")
     //script(type="text/javascript", src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js")
     script(type="text/javascript", src="/javascripts/jquery.min.js")
     script(type="text/javascript", src="/javascripts/jquery-ui.min.js")
     script(type="text/javascript", src="/socket.io/socket.io.js")
+    script(type="text/javascript", src="/javascripts/pulsar.js")
     script(type="text/javascript", src="/javascripts/javascript.js")
   body!= body
