--- a/views/index.jade
+++ b/views/index.jade
@@ -16,30 +16,20 @@ div.navbar.navbar-fixed-top
 						a(href="#") Contact
 
 div.container
-	table
-		each device in devices
-			tr
-				td.devicon(devicestatus=device.devicestatus, deviceid=device.deviceid)= device.deviceid
-				td
-					a.togbutton(deviceid=device.deviceid, href="#") Toggle
-				td
-					if device.flashstatus == "Flashing"
-						a.fbutton.stopflashbutton(deviceid=device.deviceid,href="#") Stop Flash
-					else
-						a.fbutton.flashbutton(deviceid=device.deviceid,
-						href="#") Flash
-				td.sliderouter
-					div.dimslider(deviceid=device.deviceid, initval=device.dimval)
-				td.dimvalbox
-					p.dimvalp(deviceid=device.deviceid)= device.dimval
-			tr
-				td.devicon
-				td
-					a.togbutton(href="#") Toggle
-				td
-					a.fbutton(href="#") Flash
-				td.sliderouter
-					div.dimslider
-				td.dimvalbox
-					p.dimvalp 255
+	each device in devices
+		div.row
+			div.span1.title= device.deviceid
+			div.span1.devtype= device.devicetype
+			div.span1.devicon(devicestatus=device.devicestatus, deviceid=device.deviceid) &nbsp;
+			div.span2
+				a.btn.btn-large.btn-primary.togbutton(deviceid=device.deviceid, href="#") Toggle
+			div.span2
+				if device.flashstatus != "Flashing"
+					a.btn.btn-large.btn-primary.fbutton.flashbutton(deviceid=device.deviceid, href="#") Flash
+				else
+					a.btn.btn-large.btn-primary.active.fbutton.stopflashbutton(deviceid=device.deviceid, href="#") Flash
+			div.span4.sliderouter
+				div.dimslider(deviceid=device.deviceid, initval=device.dimval)
+			div.span1.dimvalbox
+				p.dimvalp(deviceid=device.deviceid)= device.dimval
 
