--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,16 +40,12 @@ a.switchy:active {
 .navbar .brand {
   float: left;
   display: block;
-  padding: 8px 20px 12px;
-  margin-left: -20px;
-  font-size: 20px;
- /* font-weight: 200;*/
-  line-height: 1;
-  color: #ffffff;
-  font-family:"Futura", "Helvetica", "Arial";
-  text-transform: uppercase;
-  letter-spacing:2px;
-  text-shadow: 0 0 20px white;
+  background-image: url('/images/switch_logo.png');
+  background-repeat: no-repeat;
+  width: 118px;
+  height: 26px;
+  margin: 7px 10px 7px 0;
+  padding: 0;
 }
 
 .devicon {
@@ -64,4 +60,50 @@ a.switchy:active {
 .devicon[devicestatus="Off"] {
 	background-image: url('/images/bulb48px.png');
 	background-repeat: no-repeat;
+}
+
+.dimslider {
+  position: relative;
+  height: 12px;
+  background-color: #0e90d2;
+  background-image: -moz-linear-gradient(top, #149bdf, #0480be);
+  background-image: -ms-linear-gradient(top, #149bdf, #0480be);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#149bdf), to(#0480be));
+  background-image: -webkit-linear-gradient(top, #149bdf, #0480be);
+  background-image: -o-linear-gradient(top, #149bdf, #0480be);
+  background-image: linear-gradient(top, #149bdf, #0480be);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#149bdf', endColorstr='#0480be', GradientType=0);
+  -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+
+.ui-slider .ui-slider-handle {
+	position: absolute;
+	z-index: 2;
+	width: 20px;
+	height: 20px;
+	top: -5px;
+	margin-left: -10px;
+	cursor: pointer;
+	background-color: #f7f7f7;
+	border: 1px solid #d3d3d3;
+	background-image: -moz-linear-gradient(top, #f5f5f5, #f9f9f9);
+	background-image: -ms-linear-gradient(top, #f5f5f5, #f9f9f9);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f5f5f5), to(#f9f9f9));
+	background-image: -webkit-linear-gradient(top, #aaaaaa, #f7f7f7);
+	background-image: -o-linear-gradient(top, #f5f5f5, #f9f9f9);
+	background-image: linear-gradient(top, #f5f5f5, #f9f9f9);
+	background-repeat: repeat-x;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#f9f9f9', GradientType=0);
+	-webkit-box-shadow: 0 0px 5px rgba(0, 0, 0, 0.5);
+	-moz-box-shadow: 0 0px 5px rgba(0, 0, 0, 0.5);
+	box-shadow: 0 0px 5px rgba(0, 0, 0, 0.5);
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
 }
