--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ div.navbar.navbar-fixed-top
 				span.icon-bar
 				span.icon-bar
 				span.icon-bar
-			a.brand.pulsar(href="#") Switch
+			a.brand.pulsar(href="#")
 			div.nav-collapse
 				ul.nav
 					li.active
@@ -28,8 +28,6 @@ div.container
 					a.btn.btn-large.btn-primary.fbutton.flashbutton(deviceid=device.deviceid, href="#") Flash
 				else
 					a.btn.btn-large.btn-primary.active.fbutton.stopflashbutton(deviceid=device.deviceid, href="#") Flash
-			div.span4.sliderouter
+			div.span5.sliderouter
 				div.dimslider(deviceid=device.deviceid, initval=device.dimval)
-			div.span1.dimvalbox
-				p.dimvalp(deviceid=device.deviceid)= device.dimval
 
