--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -32,11 +32,6 @@ a.switchy:active {
 	background-color: #0f0;
 }
 
-.sliderouter {
-	height: 50px;
-	width: 300px;
-}
-
 .navbar .brand {
   float: left;
   display: block;
@@ -110,4 +105,22 @@ a.switchy:active {
 
 .clone {
 	display: none;
+}
+
+.devtitle, .devtype {
+	color: white;
+	font-family: Futura, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-weight: bold;
+	font-size: 24px;
+	line-height: 24px;
+	margin-top: 12px;
+	text-transform: uppercase;
+}
+
+.btn {
+	margin-top: 5px;
+}
+
+.dimslider {
+	margin-top: 18px;
 }
