--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ div.navbar.navbar-fixed-top
 				span.icon-bar
 			a.brand(href="#")
 			div.nav-collapse
-				ul.nav
+				ul.nav.pull-right
 					li.active
 						a(href="#") Home
 					li
