--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,6 +11,6 @@ html(lang="en")
     script(type="text/javascript", src="/javascripts/jquery.min.js")
     script(type="text/javascript", src="/javascripts/jquery-ui.min.js")
     script(type="text/javascript", src="/socket.io/socket.io.js")
-    script(type="text/javascript", src="/javascripts/pulsar.js")
+    script(type="text/javascript", src="/javascripts/bootstrap.min.js")
     script(type="text/javascript", src="/javascripts/javascript.js")
   body!= body
