--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -127,6 +127,7 @@ a.switchy:active {
 	line-height: 24px;
 	margin-top: 12px;
 	text-transform: uppercase;
+	text-shadow: 3px 3px 2px black;
 }
 
 .btn {
