--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype 5
 html(lang="en")
   head
     title= title
+    meta(name="viewport", content="width=device-width, intial-scale=1.0")
     link(rel="shortcut icon", href="/images/favicon.ico", type="image/png")
     link(rel="stylesheet", href="/stylesheets/bootstrap.min.css", type="text/css", media="all")
     link(rel="stylesheet", href="/stylesheets/responsive-fix.css", type="text/css", media="all")
@@ -10,6 +11,7 @@ html(lang="en")
     //script(type="text/javascript", src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js")
     script(type="text/javascript", src="/javascripts/jquery.min.js")
     script(type="text/javascript", src="/javascripts/jquery-ui.min.js")
+    script(type="text/javascript", src="/javascripts/jquery.ui.touch-punch.min.js")
     script(type="text/javascript", src="/socket.io/socket.io.js")
     script(type="text/javascript", src="/javascripts/bootstrap.min.js")
     script(type="text/javascript", src="/javascripts/javascript.js")
