--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,5 +14,6 @@ html(lang="en")
     script(type="text/javascript", src="/javascripts/jquery.ui.touch-punch.min.js")
     script(type="text/javascript", src="/socket.io/socket.io.js")
     script(type="text/javascript", src="/javascripts/bootstrap.min.js")
+    script(type="text/javascript", src="/javascripts/jquery.knob-1.1.1.js")
     script(type="text/javascript", src="/javascripts/javascript.js")
   body!= body
