--- a/views/index.jade
+++ b/views/index.jade
@@ -18,20 +18,18 @@ div.navbar.navbar-fixed-top
 div.container
 	div.row
 		each device in devices
-			div.span3.well(deviceid=device.deviceid)
+			div.span3.panel(deviceid=device.deviceid)
 				h3.devtitle.pull-right= device.devicetype
 				h3.devtitle= device.deviceid
-				div.iconbox
-					img.deviconbg(devicestatus=device.devicestatus, deviceid=device.deviceid, src="/images/bulbglow54.png", style="opacity:"+device.dimval/255)
-					img.devicon(src="/images/bulb54.png")
-				div.btn-group.switchbtns
+				if device.devicetype == "LED"
+					input.dial(type="text", data-min="0", data-max="255", data-width="220", data-fgColor="yellow", deviceid = device.deviceid, value=device.dimval)
+				div
 					a.btn.btn-large.btn-primary.togbutton(deviceid=device.deviceid, href="#") Toggle
 					if device.flashstatus != "Flashing"
-						a.btn.btn-large.btn-primary.fbutton.flashbutton(deviceid=device.deviceid, href="#") Flash
+						a.btn.btn-large.btn-primary.fbutton.pull-right.flashbutton(deviceid=device.deviceid, href="#") Flash
 					else
-						a.btn.btn-large.btn-primary.active.fbutton.stopflashbutton(deviceid=device.deviceid, href="#") Flash
-				if device.devicetype == "LED"
-					input.dial(type="text", data-min="0", data-max="255", data-width="220", deviceid = device.deviceid, value=device.dimval)
+						a.btn.btn-large.btn-primary.active.fbutton.pull-right.stopflashbutton(deviceid=device.deviceid, href="#") Flash
+
 		div.row.clone(deviceid="")
 			div.span2.devtitle &nbsp;
 			div.span1.devtype &nbsp;
