--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -179,3 +179,25 @@ a.switchy:active {
 	font-weight: 500;
 
 }
+
+/* Media queries for responsive jQuery knob. */
+
+/* Landscape phones and down */
+@media (max-width: 480px) {
+	
+}
+ 
+/* Landscape phone to portrait tablet */
+@media (max-width: 767px) {
+
+}
+ 
+/* Portrait tablet to landscape and desktop */
+@media (min-width: 768px) and (max-width: 979px) {
+
+}
+ 
+/* Large desktop */
+@media (min-width: 1200px) {
+
+}
