--- a/views/index.jade
+++ b/views/index.jade
@@ -19,9 +19,9 @@ div.container
 	div.row
 		each device in devices
 			div.span3.panel(deviceid=device.deviceid)
-				h3.devtitle.pull-right= device.devicetype
+				h3.devtype.pull-right= device.devicetype
 				h3.devtitle= device.deviceid
-				if device.devicetype == "LED"
+				if ( device.devicetype == "LED" || device.devicetype == "Dimmable Light" )
 					input.dial(type="text", data-min="0", data-max="255", data-width="220", data-fgColor="yellow", deviceid = device.deviceid, value=device.dimval)
 				div
 					a.btn.btn-large.btn-primary.togbutton(deviceid=device.deviceid, href="#") Toggle
@@ -30,15 +30,10 @@ div.container
 					else
 						a.btn.btn-large.btn-primary.active.fbutton.pull-right.stopflashbutton(deviceid=device.deviceid, href="#") Flash
 
-		div.row.clone(deviceid="")
-			div.span2.devtitle &nbsp;
-			div.span1.devtype &nbsp;
-			div.span1.iconbox
-				img.deviconbg(src="/images/bulbglow54.png", deviceid="")
-				img.devicon(src="/images/bulb54.png")
-			div.span3
-				div.btn-group
-					a.btn.btn-large.btn-primary.togbutton(deviceid="", href="#") Toggle
-					a.btn.btn-large.btn-primary.fbutton.flashbutton(deviceid="", href="#") Flash
-			div.span5
-				div.dimslider(deviceid="", initval="")
+		div.span3.panel.clone(deviceid="")
+			h3.devtype.pull-right &nbsp;
+			h3.devtitle &nbsp;
+			input.dial(type="text", data-min="0", data-max="255", data-width="220", data-fgColor="yellow", deviceid = "", value="255")
+			div
+				a.btn.btn-large.btn-primary.togbutton(deviceid="", href="#") Toggle
+				a.btn.btn-large.btn-primary.fbutton.pull-right.flashbutton(deviceid="", href="#") Flash
