--- a/views/index.jade
+++ b/views/index.jade
@@ -16,24 +16,25 @@ div.navbar.navbar-fixed-top
 						a(href="#") Contact
 
 div.container
-	div.row
-		each device in devices
-			div.span3.panel(deviceid=device.deviceid)
-				h3.devtype.pull-right= device.devicetype
-				h3.devtitle= device.deviceid
-				if ( device.devicetype == "LED" || device.devicetype == "Dimmable Light" )
-					input.dial(type="text", data-min="0", data-max="255", data-width="220", data-fgColor="yellow", deviceid = device.deviceid, value=device.dimval)
-				div
-					a.btn.btn-large.btn-primary.togbutton(deviceid=device.deviceid, href="#") Toggle
-					if device.flashstatus != "Flashing"
-						a.btn.btn-large.btn-primary.fbutton.pull-right.flashbutton(deviceid=device.deviceid, href="#") Flash
-					else
-						a.btn.btn-large.btn-primary.active.fbutton.pull-right.stopflashbutton(deviceid=device.deviceid, href="#") Flash
-
-		div.span3.panel.clone(deviceid="")
-			h3.devtype.pull-right &nbsp;
-			h3.devtitle &nbsp;
-			input.dial(type="text", data-min="0", data-max="255", data-width="220", data-fgColor="yellow", deviceid = "", value="255")
+	each device in devices
+		div.span3.panel(deviceid=device.deviceid)
+			h3.devtype.pull-right= device.devicetype
+			h3.devtitle= device.deviceid
+			if ( device.devicetype == "LED" || device.devicetype == "Dimmable Light" )
+				div.dial-div
+					input.dial(type="text", deviceid=device.deviceid, value=device.dimval)
 			div
-				a.btn.btn-large.btn-primary.togbutton(deviceid="", href="#") Toggle
-				a.btn.btn-large.btn-primary.fbutton.pull-right.flashbutton(deviceid="", href="#") Flash
+				a.btn.btn-large.btn-primary.togbutton(deviceid=device.deviceid, href="#") Toggle
+				if device.flashstatus != "Flashing"
+					a.btn.btn-large.btn-primary.fbutton.pull-right.flashbutton(deviceid=device.deviceid, href="#") Flash
+				else
+					a.btn.btn-large.btn-primary.active.fbutton.pull-right.stopflashbutton(deviceid=device.deviceid, href="#") Flash
+
+	div.span3.panel.clone(deviceid="")
+		h3.devtype.pull-right &nbsp;
+		h3.devtitle &nbsp;
+		div.dial-div
+			input.clone-dial(type="text", deviceid = "", value="255")
+		div
+			a.btn.btn-large.btn-primary.togbutton(deviceid="", href="#") Toggle
+			a.btn.btn-large.btn-primary.fbutton.pull-right.flashbutton(deviceid="", href="#") Flash
