--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype 5
 html(lang="en")
   head
-    title= title
+    title Spark
     meta(name="viewport", content="width=device-width, intial-scale=1.0")
     link(rel="shortcut icon", href="/images/favicon.ico", type="image/png")
     link(rel="stylesheet", href="/stylesheets/bootstrap.min.css", type="text/css", media="all")
@@ -15,4 +15,5 @@ html(lang="en")
     script(type="text/javascript", src="/javascripts/bootstrap.min.js")
     script(type="text/javascript", src="/javascripts/jquery.knob.js")
     script(type="text/javascript", src="/javascripts/javascript.js")
-  body!= body
+  body
+    block content
