--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,129 +28,25 @@ a.switchy:active {
 	-webkit-transition: all 0.5s;	
 }
 
-.srvrok {
-	background-color: #0f0;
-}
-
 .navbar .brand {
   float: left;
   display: block;
-  background-image: url('/images/switch_logo.png');
+  background-image: url('/images/spark-30px.png');
   background-repeat: no-repeat;
-  width: 118px;
-  height: 26px;
+  width: 30px;
+  height: 30px;
   margin: 7px 10px 7px 0;
   padding: 0;
-}
-
-.iconbox {
-	height:68px;
-	width: 54px;
-	position: relative;
-	margin: 0 auto;
-}
-
-.deviconbg {
-	position: absolute;
-	z-index: -1;
-}
-
-.devicon {
-	position: absolute;
-}
-
-
-/*.devicon[devicestatus="On"] {
-	background-image: url('/images/bulbglow54.png');
-	background-repeat: no-repeat;
-}*/
-
-.deviconbg[devicestatus="Off"] {
-	/*background-image: url('/images/bulb48px.png');*/
-	/*background-repeat: no-repeat;*/
-	display: none;
-}
-
-.dimslider {
-  position: relative;
-  height: 12px;
-  background-color: #0e90d2;
-  background-image: -moz-linear-gradient(top, #149bdf, #0480be);
-  background-image: -ms-linear-gradient(top, #149bdf, #0480be);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#149bdf), to(#0480be));
-  background-image: -webkit-linear-gradient(top, #149bdf, #0480be);
-  background-image: -o-linear-gradient(top, #149bdf, #0480be);
-  background-image: linear-gradient(top, #149bdf, #0480be);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#149bdf', endColorstr='#0480be', GradientType=0);
-  -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
-  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-}
-
-.ui-slider .ui-slider-handle {
-	position: absolute;
-	z-index: 2;
-	width: 20px;
-	height: 20px;
-	top: -5px;
-	margin-left: -10px;
-	cursor: pointer;
-	background-color: #f7f7f7;
-	border: 1px solid #d3d3d3;
-	background-image: -moz-linear-gradient(top, #f5f5f5, #f9f9f9);
-	background-image: -ms-linear-gradient(top, #f5f5f5, #f9f9f9);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f5f5f5), to(#f9f9f9));
-	background-image: -webkit-linear-gradient(top, #aaaaaa, #f7f7f7);
-	background-image: -o-linear-gradient(top, #f5f5f5, #f9f9f9);
-	background-image: linear-gradient(top, #f5f5f5, #f9f9f9);
-	background-repeat: repeat-x;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#f9f9f9', GradientType=0);
-	-webkit-box-shadow: 0 0px 5px rgba(0, 0, 0, 0.5);
-	-moz-box-shadow: 0 0px 5px rgba(0, 0, 0, 0.5);
-	box-shadow: 0 0px 5px rgba(0, 0, 0, 0.5);
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
 }
 
 .clone {
 	display: none;
 }
 
-/*.devtitle, .devtype {
-	color: white;
-	font-family: Futura, "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-weight: bold;
-	font-size: 24px;
-	line-height: 24px;
-	margin-top: 22px;
-	text-transform: uppercase;
-	text-shadow: 3px 3px 2px black;
-}*/
-
-.btn {
-	margin-top: 15px;
-}
-
-.dial {
-	box-shadow: none;
-	background: none;
-	height: 44px;
-}
-
-.switchbtns {
-	padding: 0 35px;
-	margin-bottom: 10px;
-}
-
 .panel {
 	position: relative;
 	min-height: 20px;
-	padding: 19px;
+	padding: 10px;
 	margin-bottom: 20px;
 	background-color: rgba(255, 255, 255, 0.15);
 	border: 1px solid #eee;
@@ -169,13 +65,17 @@ a.switchy:active {
 	text-decoration: none;
 	font-family: Futura, Helvetica, Arial, sans-serif;
 	font-weight: 500;
+	text-align: center;
+}
 
+.devicetitle {
+	margin-bottom: 5px;
 }
 
 /* Put the jQuery knob in the middle of the panel. */
 
 .dial-div {
-	width: 166px;
+	width: 100px;
 	margin: 0 auto;
 }
 
